<resources>
    <string name="app_name">News</string>
    <string name="todo" />
    <string name="news_app" />
    <string name="welcome" />
    <string name="bringing_you_the_latest_news" />
    <string name="select_a_language" />
    <string name="english" />
    <string name="hindi" />
    <string name="telugu" />
    <string name="Bengali" />
    <string name="title_activity_main_english">MainActivityEnglish</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="zee_news" />
    <string name="times_of_india" />
    <string name="hindustan_times" />
    <string name="ndtv_24x7" />
    <string name="title_activity_main_hindi">MainActivityHindi</string>
    <string name="khaas" />
    <string name="ajt" />
    <string name="db" />
    <string name="pn" />
    <string name="kk">खास खबर</string>
    <string name="aj">आज तक</string>
    <string name="dbs">दैनिक भास्कर</string>
    <string name="pk">पत्रिका समाचार</string>
    <string name="title_activity_main_telugu">MainActivityTelugu</string>
    <string name="ee" />
    <string name="tv9" />
    <string name="andj" />
    <string name="ntv" />
    <string name="en">ఈనాడు వార్తలు</string>
    <string name="_9">టీవీ 9</string>
    <string name="ajn">ఆంధ్ర జ్యోతి</string>
    <string name="n">ఎన్టీవీ తెలుగు</string>
    <string name="title_activity_main_bengali">MainActivityBengali</string>
    <string name="Kolkatatv" />
    <string name="news18" />
    <string name="zee" />
    <string name="abp" />
    <string name="ktv">কলকাতা টিভি</string>
    <string name="_18">খবর18</string>
    <string name="zg">জিঘন্টা</string>
    <string name="abpa">এবিপি আনন্দ</string>
    <string name="title_activity_main_international">MainActivityInternational</string>
    <string name="bbc">BBC</string>
    <string name="msnbc">MSNBC</string>
    <string name="string_msnbc" />
    <string name="cnn">CNN</string>
    <string name="string_cnn" />
    <string name="fox_news">Fox News</string>
    <string name="string_string_cnn" />
    <string name="string_string_msnbc" />
</resources>